--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <body >
     <header>
       <img class="logo" src="img/CSS.png" width="200px" height="60px" />
-      <h1>
+      <img class="logo1" src="img/name.png" width="240px" height="140px" />
+      <!-- <h1>
         Wahyu Pambudi
       </h1>
-      <h5>Junior Full Stack Web Developer</h5>
+      <h5>Junior Full Stack Web Developer</h5> -->
       <nav>
         <ul>
           <li><a href="#">Portofolio</a></li>
@@ -22,7 +23,7 @@
     <section>
     <div class="atas"> 
       <br>
-      <h1 class="col"> Welcome My Portofolio </h1>
+      <h1 class="col"> Hello! Welcome My Page </h1>
       <img src="./img/myy.jpg" width="220px" height="220px"  class="imgmy"/>
       <h1 class="tatas">
         Wahyu Pambudi
@@ -46,8 +47,8 @@
     <div>
         <p>
           <h2><fieldset class="destination">
-            <legend class="leg">// Landmarks</legend>
-            <legend class="font"><strong> Newest Listing LAMPUNG </strong></legend>
+            <legend class="leg">// Portofolio</legend>
+            <legend class="font"><strong> Never Give Up for Your Dreams. Try Istiqomah and Make it Happen !! </strong></legend>
             
           </fieldset></h2>
   
