--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h5>Junior Full Stack Web Developer</h5> -->
       <nav>
         <ul>
-          <li><a href="#">Portofolio</a></li>
-          <li><a href="#">About Me</a></li>
-          <li><a href="#">Galeri</a></li>
+          <li><a href="#about">About Me</a></li>
+          <li><a href="#histori">History</a></li>
+          <li><a href="#quotes">Quotes</a></li>
         </ul>
       </nav>
     </header>
@@ -29,7 +29,7 @@
         Wahyu Pambudi
       </h1><h2 class="tatas1">Junior Full Stack Web Developer</h2>
     
-    <div>
+    <div id="about">
       <p>
         <h2><fieldset class="destination">
           <legend class="leg">// About Me</legend>
@@ -38,17 +38,25 @@
               A Teenager who was born on November 9, 2000, in South Lampung. Desire to be happy with the world and the hereafter. Especially with parents and family. And with clear stages.
               I'm currently on a course at Andaglos Developer Academy About Full Stack Web Developers . And I hope this will be useful for me in the future. 
           </p>
-        </fieldset></h2>
-
-      </p>
     </div>
 
-
-    <div>
+    <div id="histori">
         <p>
           <h2><fieldset class="destination">
-            <legend class="leg">// Portofolio</legend>
-            <legend class="font"><strong> Never Give Up for Your Dreams. Try Istiqomah and Make it Happen !! </strong></legend>
+            <legend class="leg">// History</legend>
+            <legend class="font"><strong> Wahyu Pambudi </strong></legend>
+            <p class="about">
+                Graduates of SD Negeri 1 Perumnas Way Kandis, MTs 2 Bandar Lampung, and SMK Negeri 1 Bandar Lampung (Computer Engineering Network). Ever Worked in Young Entrepreneurs.
+                Have Experience LKS Web Design, Ms Office, Mikrotik, Debian Server Experience. and Computer Hardware
+            </p>
+      </div>
+
+
+    <div id="quotes">
+        <p>
+          <h2><fieldset class="destination">
+            <legend class="leg">// Quotes</legend>
+            <legend class="font" ><strong><em> Never Give Up for Your Dreams. Try Istiqomah and Make it Happen !! </em></strong></legend>
             
           </fieldset></h2>
   
