--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
       <img src="./img/myy.jpg" width="220px" height="220px"  class="imgmy"/>
       <h1 class="tatas">
         Wahyu Pambudi
-      </h1><h2 class="tatas1">Junior Full Stack Web Developer</h2>
-    
+      </h1><h2 class="tatas1">Junior Full Stack Web Developer</h2><br>
+    <div class="table"> 
+        <a href="https://web.facebook.com/wahyuepambudhie.pambudhie" target="_blank"> <img src="./img/fb.png" width="40px" height="40px"></a> 
+        <a href="https://www.linkedin.com/in/wahyu-pambudi-170457136/" target="_blank"> <img src="./img/linkedin.png" width="40px" height="40px"></a>
+        <a href="https://github.com/wahyupambudi" target="_blank"> <img src="./img/GitHub-Mark.png" width="40px" height="40px"></a>
+          
+    </div>
     <div id="about">
       <p>
         <h2><fieldset class="destination">
