--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         Wahyu Pambudi
       </h1><h2 class="tatas1">Junior Full Stack Web Developer</h2><br>
     <div class="table"> 
-        <a href="https://web.facebook.com/wahyuepambudhie.pambudhie" target="_blank"> <img src="./img/fb.png" width="40px" height="40px"></a> 
-        <a href="https://www.linkedin.com/in/wahyu-pambudi-170457136/" target="_blank"> <img src="./img/linkedin.png" width="40px" height="40px"></a>
-        <a href="https://github.com/wahyupambudi" target="_blank"> <img src="./img/GitHub-Mark.png" width="40px" height="40px"></a>
-          
+        <a href="https://web.facebook.com/wahyuepambudhie.pambudhie" target="_blank"> <img src="./img/fb.png" width="40px" height="40px" class="mar"></a> 
+        <a href="https://www.linkedin.com/in/wahyu-pambudi-170457136/" target="_blank"> <img src="./img/linkedin.png" width="40px" height="40px" class="mar"></a>
+        <a href="https://github.com/wahyupambudi" target="_blank"> <img src="./img/GitHub-Mark.png" width="40px" height="40px" class="mar"></a>
+        <a href="https://medium.com/@wahyup9" target="_blank"> <img src="./img/medium.png" width="55px" height="55px" class="mar"></a>
+        <p>wahyupambudi823@gmail.com <em><br>or</em><br> +6289682787161</p>
     </div>
     <div id="about">
       <p>
