--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							data-mdl-for="demo-menu-lower-right">
 							<li class="mdl-menu__item"><a href="#"><i class="zmdi zmdi-download font-red pr-10"></i>Download CV</a></li>
 							<li class="mdl-menu__item"><a href="wahyupambudi823@gmail.com"><i class="zmdi zmdi-email-open font-green pr-10"></i>Contact Me</a></li>
-							<li class="mdl-menu__item"><a href="callto:12345678910"><i class="zmdi zmdi-phone  font-blue  pr-10"></i>+6289682787161</a></li>
+							<li class="mdl-menu__item"><a href="callto:+6289682787161"><i class="zmdi zmdi-phone  font-blue  pr-10"></i>+6289682787161</a></li>
 						</ul>
 					</div>
 				</header>
