--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<title>Wahyu Pambudi</title>
-		<meta name="description" content="Matresume is a material CV / Resume / Vcard / Portfolio HTML5 template by hencework." />
-		<meta name="keywords" content="material design, resume, responsive template, cv, multipurpose, portfolio, html5 template, themeforest.net, bootstrap, html5, creative, landing page, sass, clean, design, modern, angular js," />
+		<meta name="description" content="CV page about Wahyu Pambudi, Full-Stack Web Developer." />
+		<meta name="keywords" content="material design, resume, responsive template, cv, multipurpose, portfolio, html5 template, themeforest.net, bootstrap, html5, creative, landing page, sass, clean, design, modern, angular js, wahyu p, wahyu pambudi, wahyupambudi, awonapa, web developer, web design, website, developer, web developer full stack, web developer front end, web developer back end" />
 		<meta name="author" content="hencework"/>
 		
 		<link rel="shortcut icon" href="favicon.ico">
