--- a/index.html
+++ b/index.html
@@ -274,6 +274,12 @@
 														</div>
 													</li>
 													<li>
+														<div class="profile-title">Blog</div>
+														<div class="profile-desc">
+															https://www.awonapa.com/
+														</div>
+													</li>
+													<li>
 														<div class="profile-title">email</div>
 														<div class="profile-desc">
 															wahyupambudi823@gmail.com
