--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 						<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
 							data-mdl-for="demo-menu-lower-right">
-							<li class="mdl-menu__item"><a href="#"><i class="zmdi zmdi-download font-red pr-10"></i>Download CV</a></li>
+							<li class="mdl-menu__item"><a href="https://drive.google.com/file/d/1FPjheG3TUJ3w_tKapTKN8w35A-8cv4o6/view?usp=sharing"><i class="zmdi zmdi-download font-red pr-10"></i>Download CV</a></li>
 							<li class="mdl-menu__item"><a href="wahyupambudi823@gmail.com"><i class="zmdi zmdi-email-open font-green pr-10"></i>Contact Me</a></li>
 							<li class="mdl-menu__item"><a href="callto:+6289682787161"><i class="zmdi zmdi-phone  font-blue  pr-10"></i>+6289682787161</a></li>
 						</ul>
