--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 													<h1>Wahyu Pambudi</h1>
 													<h5 class="mt-20 font-grey">UI/UX Designer, Front End & Back End Developer</h5>
 													<div class="mt-30">
-														<a id="download_cv" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect  bg-green font-white mr-10" href="#">download cv</a>
+														<a id="download_cv" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect  bg-green font-white mr-10" href="https://drive.google.com/file/d/1FPjheG3TUJ3w_tKapTKN8w35A-8cv4o6/view?usp=sharing">download cv</a>
 														<a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect bg-blue font-white" href="https://api.whatsapp.com/send?phone=6289682787161&text=Assalamualaikum Wr Wb" target="_blank">contact</a>
 													</div>
 												</div>
