--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<span class="candidate-name block mb-10 text-center">Wahyu Pambudi</span>
 							<ul class="social-icons  mb-30">
 								<li>
-									<a class="facebook-link" href="https://www.facebook.com/wahyuepambudhie.pambudhie">
+									<a class="facebook-link" href="facebook.com/wahyu.awonapa">
 										<i id="tt11" class="zmdi zmdi-facebook"></i>
 										<div class="mdl-tooltip" data-mdl-for="tt11">
 											facebook
@@ -206,7 +206,7 @@
 												<div class="candidate-img mb-35"></div>
 												<ul class="social-icons">
 													<li>
-														<a class="facebook-link" href="https://www.facebook.com/wahyuepambudhie.pambudhie">
+														<a class="facebook-link" href="facebook.com/wahyu.awonapa">
 															<i id="tt1" class="zmdi zmdi-facebook"></i>
 															<div class="mdl-tooltip" data-mdl-for="tt1">
 																facebook
@@ -969,7 +969,7 @@
 							<p class="mt-10">© 2019 Wahyu Pambudi</p>
 								<ul class="social-icons mt-10">
 									<li>
-										<a class="facebook-link" href="https://www.facebook.com/wahyuepambudhie.pambudhie">
+										<a class="facebook-link" href="facebook.com/wahyu.awonapa">
 											<i id="tt6" class="zmdi zmdi-facebook"></i>
 											<div class="mdl-tooltip" data-mdl-for="tt6">
 												facebook
